--- a/portfolio.html
+++ b/portfolio.html
@@ -26,8 +26,12 @@
                 </ul>
             </nav>
             <ul class="header-list-contact">
-                <li class="item"><a href="mailto:info@devstudio.com" class="link-contact">info@devstudio.com</a></li>
-                <li class="item"><a href="tel:+380961111111" class="link-contact">+38 096 111 11 11</a></li>
+                <li class="item"><a href="mailto:info@devstudio.com" class="link-contact"><svg class="header-list-mail-icon">
+                            <use href="./images/sprite.svg#icon-envelopemail"></use>
+                        </svg>info@devstudio.com</a></li>
+                <li class="item"><a href="tel:+380961111111" class="link-contact"><svg class="header-list-phone-icon">
+                            <use href="./images/sprite.svg#icon-smartphone"></use>
+                        </svg>+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
