add social list icon

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             </ul>
         </nav>
         <ul class="header-list-contact">
-            <li class="item"><a href="mailto:info@devstudio.com" class="link-contact"><svg class="header-list-mail-icon">
+            <li class="item"><a href="mailto:info@devstudio.com" class="link-contact"><svg class="header-list-icon" width="16px" height="12px">
                 <use href="./images/sprite.svg#icon-envelopemail"></use>
             </svg>info@devstudio.com</a></li>
-            <li class="item"><a href="tel:+380961111111" class="link-contact"><svg class="header-list-phone-icon">
+            <li class="item"><a href="tel:+380961111111" class="link-contact"><svg class="header-list-icon" width="10px" height="16px">
                 <use href="./images/sprite.svg#icon-smartphone"></use>
             </svg>+38 096 111 11 11</a></li>
         </ul>
@@ -45,18 +45,30 @@
             <h2 hidden>Плюсы компании</h2>
             <ul class="features-list">
                 <li class="features-item">
+                   <div class="features-item features-item-wallpaper"><svg width="70px" height="70px">
+                        <use href="./images/sprite.svg#icon-antenna-1"></use>
+                    </svg></div>
                     <h3 class="section-4-h3">Внимание к деталям</h3>
                     <p class="section-4-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li class="features-item">
+                    <div class="features-item features-item-wallpaper"><svg width="70px" height="70px">
+                            <use href="./images/sprite.svg#icon-clock-1"></use>
+                        </svg></div>
                     <h3 class="section-4-h3">Пунктуальность</h3>
                     <p class="section-4-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li class="features-item">
+                    <div class="features-item features-item-wallpaper"><svg width="70px" height="70px">
+                            <use href="./images/sprite.svg#icon-diagram1"></use>
+                        </svg></div>
                     <h3 class="section-4-h3">Планирование</h3>
                     <p class="section-4-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li class="features-item">
+                    <div class="features-item features-item-wallpaper"><svg width="70px" height="70px">
+                            <use href="./images/sprite.svg#icon-astronaut-1"></use>
+                        </svg></div>
                     <h3 class="section-4-h3">Современные технологии</h3>
                     <p class="section-4-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
@@ -68,11 +80,11 @@
             <h2 class="title">Чем мы занимаемся</h2>
             <ul class="services-list">
                 <li class="services-item"> <img src="./images/programer-working.jpg" 
-                    alt="Фото создание программного кода" width="370" height="294" ></li>
+                    alt="Фото создание программного кода" width="370px" height="294px" ></li>
                 <li class="services-item"> <img src="./images/creative-artist-web-design.jpg" 
                     alt="Фото создание мобильных приложений" width="370" height="294" ></li>
                 <li class="services-item"> <img src="./images/web-ui-designers-are-developing-app.jpg" 
-                    alt="Фото работа с дизайном" width="370" height="294" ></li>
+                    alt="Фото работа с дизайном" width="370px" height="294px" ></li>
             </ul>
 </div>
         </section>
@@ -82,27 +94,133 @@
 <h2 class="title">Наша команда</h2>
 <ul class="team-list">
     <li class="team-item">
-        <img src="./images/igor-demjanenko-1.jpg" alt="Игорь Демьяненко" width="270" height="260">
+        <img src="./images/igor-demjanenko-1.jpg" alt="Игорь Демьяненко" width="270px" height="260px">
         <div class="team-box">
             <h3 class="team-name">Игорь Демьяненко</h3>
         <p class="section-6-text" lang="en">Product Designer</p>
+        <ul class="team-social-list">
+            <li class="team-social-item">
+                <a class="team-social-link" href="">
+                <svg class="team-social-icon" width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-instagram1"></use>
+                </svg></a>
+            </li>
+            <li class="team-social-item">
+                <a class="team-social-link" href="">
+                <svg class="team-social-icon" width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-twitter1"></use>
+                </svg></a>
+            </li> 
+            <li class="team-social-item">
+                <a class="team-social-link" href="">
+                <svg class="team-social-icon" width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-facebook1"></use>
+                </svg></a>
+            </li>
+            <li class="team-social-item">
+                <a class="team-social-link" href="">
+                <svg class="team-social-icon" width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-linkedin1"></use>
+                </svg></a>
+            </li>
+        </ul>
         </div>
     </li>
     <li class="team-item">
-        <img src="./images/olga-repina-2.jpg" alt="Ольга Репина" width="270" height="260">
+        <img src="./images/olga-repina-2.jpg" alt="Ольга Репина" width="270px" height="260px">
         <div class="team-box">
         <h3 class="team-name">Ольга Репина</h3>
-        <p class="section-6-text" lang="en">Frontend Developer</p></div>
+        <p class="section-6-text" lang="en">Frontend Developer</p>
+        <ul class="team-social-list">
+            <li class="team-social-item">
+                <a class="team-social-link" href="">
+                    <svg class="team-social-icon" width="20px" height="20px">
+                        <use href="./images/sprite.svg#icon-instagram1"></use>
+                    </svg></a>
+            </li>
+            <li class="team-social-item">
+                <a class="team-social-link" href="">
+                    <svg class="team-social-icon" width="20px" height="20px">
+                        <use href="./images/sprite.svg#icon-twitter1"></use>
+                    </svg></a>
+            </li>
+            <li class="team-social-item">
+                <a class="team-social-link" href="">
+                    <svg class="team-social-icon" width="20px" height="20px">
+                        <use href="./images/sprite.svg#icon-facebook1"></use>
+                    </svg></a>
+            </li>
+            <li class="team-social-item">
+                <a class="team-social-link" href="">
+                    <svg class="team-social-icon" width="20px" height="20px">
+                        <use href="./images/sprite.svg#icon-linkedin1"></use>
+                    </svg></a>
+            </li>
+        </ul>
+    </div>
     </li>
     <li class="team-item">
-        <img src="./images/nikolay-tarasov-3.jpg" alt="Николай Тарасов" width="270" height="260">
+        <img src="./images/nikolay-tarasov-3.jpg" alt="Николай Тарасов" width="270px" height="260px">
         <div class="team-box"><h3 class="team-name">Николай Тарасов</h3>
-        <p class="section-6-text" lang="en">Marketing</p></div>
+        <p class="section-6-text" lang="en">Marketing</p>
+    <ul class="team-social-list">
+        <li class="team-social-item">
+            <a class="team-social-link" href="">
+                <svg class="team-social-icon" width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-instagram1"></use>
+                </svg></a>
+        </li>
+        <li class="team-social-item">
+            <a class="team-social-link" href="">
+                <svg class="team-social-icon" width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-twitter1"></use>
+                </svg></a>
+        </li>
+        <li class="team-social-item">
+            <a class="team-social-link" href="">
+                <svg class="team-social-icon" width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-facebook1"></use>
+                </svg></a>
+        </li>
+        <li class="team-social-item">
+            <a class="team-social-link" href="">
+                <svg class="team-social-icon" width="20px" height="20px">
+                    <use href="./images/sprite.svg#icon-linkedin1"></use>
+                </svg></a>
+        </li>
+    </ul>
+    </div>
     </li>
     <li class="team-item">
-        <img src="./images/mihail-ermakov-4.jpg" alt="Михаил Ермаков" width="270" height="260">
+        <img src="./images/mihail-ermakov-4.jpg" alt="Михаил Ермаков" width="270px" height="260px">
        <div class="team-box"><h3 class="team-name">Михаил Ермаков</h3>
         <p class="section-6-text" lang="en">UI Designer</p>
+        <ul class="team-social-list">
+            <li class="team-social-item">
+                <a class="team-social-link" href="">
+                    <svg class="team-social-icon" width="20px" height="20px">
+                        <use href="./images/sprite.svg#icon-instagram1"></use>
+                    </svg></a>
+            </li>
+            <li class="team-social-item">
+                <a class="team-social-link" href="">
+                    <svg class="team-social-icon" width="20px" height="20px">
+                        <use href="./images/sprite.svg#icon-twitter1"></use>
+                    </svg></a>
+            </li>
+            <li class="team-social-item">
+                <a class="team-social-link" href="">
+                    <svg class="team-social-icon" width="20px" height="20px">
+                        <use href="./images/sprite.svg#icon-facebook1"></use>
+                    </svg></a>
+            </li>
+            <li class="team-social-item">
+                <a class="team-social-link" href="">
+                    <svg class="team-social-icon" width="20px" height="20px">
+                        <use href="./images/sprite.svg#icon-linkedin1"></use>
+                    </svg></a>
+            </li>
+        </ul>
     </div>
     </li>
 </ul>
