--- a/index.html
+++ b/index.html
@@ -224,10 +224,66 @@
     </div>
     </li>
 </ul>
-</div>
    </section>
+   <!-- Секция Постоянные клиенты -->
+        <section class="client"><div class="container">
+            <h2 class="title">Постоянные клиенты</h2>
+            <ul class="client-list">
+                <li class="client-item">
+                    <a class="client-link" href="">
+                        <svg class="client-icon" width="106px" height="60px">
+                            <use href="./images/sprite.svg#icon-company1logo">
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="client-item">
+                    <a class="client-link" href="">
+                        <svg class="client-icon" width="106px" height="60px">
+                            <use href="./images/sprite.svg#icon-company2logo">
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="client-item">
+                    <a class="client-link" href="">
+                        <svg class="client-icon" width="106px" height="60px">
+                            <use href="./images/sprite.svg#icon-company3logo">
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="client-item">
+                    <a class="client-link" href="">
+                        <svg class="client-icon" width="106px" height="60px">
+                            <use href="./images/sprite.svg#icon-company4logo">
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="client-item">
+                    <a class="client-link" href="">
+                        <svg class="client-icon" width="106px" height="60px">
+                            <use href="./images/sprite.svg#icon-company5logo">
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="client-item">
+                    <a class="client-link" href="">
+                        <svg class="client-icon" width="106px" height="60px">
+                            <use href="./images/sprite.svg#icon-company6logo">
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        </section>
     </main>
-    <footer class="footer-background"> <div class="container">
+    <footer class="footer-background"> 
+    <div class="footer-section">
+        <div class="logo-adress">
         <a class="logo" href="./index.html"><span class="logo-span">Web</span><span class="logo-span-footer">Studio</span></a>
         <address>
             <ul class="footer-list">
@@ -243,6 +299,40 @@
             </ul>
         </address>
         </div>
+        <div class="footer-social">
+            <p class="footer-social-name">Присоединяйтесь</p>
+            <ul class="footer-social-list">
+                <li class="footer-social-item">
+                    <a class="footer-social-link" href="">
+                        <svg class="footer-social-icon" width="20px" height="20px">
+                            <use href="./images/sprite.svg#icon-instagram1"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-social-item">
+                    <a class="footer-social-link" href="">
+                        <svg class="footer-social-icon" width="20px" height="20px">
+                            <use href="./images/sprite.svg#icon-twitter1"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-social-item">
+                    <a class="footer-social-link" href="">
+                        <svg class="footer-social-icon" width="20px" height="20px">
+                            <use href="./images/sprite.svg#icon-facebook1"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-social-item">
+                    <a class="footer-social-link" href="">
+                        <svg class="footer-social-icon" width="20px" height="20px">
+                            <use href="./images/sprite.svg#icon-linkedin1"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
     </footer>
 </body>
 </html>
