add portfolio icon

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,16 +20,18 @@
             <nav class="main-nav">
                 <a class="logo" href="./index.html"><span class="logo-span">Web</span>Studio</a>
                 <ul class="header-list site-nav">
-                    <li class="item"><a href="./index.html" class="link">Студия</a></li>
+                    <li class="item"><a href="./index.html" class="link ">Студия</a></li>
                     <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
                     <li class="item"><a href="" class="link">Контакты</a></li>
                 </ul>
             </nav>
             <ul class="header-list-contact">
-                <li class="item"><a href="mailto:info@devstudio.com" class="link-contact"><svg class="header-list-mail-icon">
+                <li class="item"><a href="mailto:info@devstudio.com" class="link-contact"><svg class="header-list-icon"
+                            width="16px" height="12px">
                             <use href="./images/sprite.svg#icon-envelopemail"></use>
                         </svg>info@devstudio.com</a></li>
-                <li class="item"><a href="tel:+380961111111" class="link-contact"><svg class="header-list-phone-icon">
+                <li class="item"><a href="tel:+380961111111" class="link-contact"><svg class="header-list-icon" width="10px"
+                            height="16px">
                             <use href="./images/sprite.svg#icon-smartphone"></use>
                         </svg>+38 096 111 11 11</a></li>
             </ul>
@@ -101,23 +103,58 @@
 </main>
 <!-- Подвал -->
     <footer class="footer-background">
-        <div class="container">
-            <a class="logo" href="./index.html"><span class="logo-span">Web</span><span
-                    class="logo-span-footer">Studio</span></a>
-            <address>
-                <ul class="footer-list">
-                    <li class="footer-item">
-                        <a href="https://goo.gl/maps/SxN2yB6NeiDHtefY7" class="footer-map" target="_blank"
-                            rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+        <div class="footer-section">
+            <div class="logo-adress">
+                <a class="logo" href="./index.html"><span class="logo-span">Web</span><span
+                        class="logo-span-footer">Studio</span></a>
+                <address>
+                    <ul class="footer-list">
+                        <li class="footer-item">
+                            <a href="https://goo.gl/maps/SxN2yB6NeiDHtefY7" class="footer-map" target="_blank"
+                                rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+                        </li>
+                        <li class="footer-item">
+                            <a href="mailto:info@example.com" class="footer-item">info@example.com</a>
+                        </li>
+                        <li class="footer-item">
+                            <a href="tel:+380991111111" class="footer-item">+38 099 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+            <div class="footer-social">
+                <p class="footer-social-name">Присоединяйтесь</p>
+                <ul class="footer-social-list">
+                    <li class="footer-social-item">
+                        <a class="footer-social-link" href="">
+                            <svg class="footer-social-icon" width="20px" height="20px">
+                                <use href="./images/sprite.svg#icon-instagram1"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="footer-item">
-                        <a href="mailto:info@example.com" class="footer-item">info@example.com</a>
+                    <li class="footer-social-item">
+                        <a class="footer-social-link" href="">
+                            <svg class="footer-social-icon" width="20px" height="20px">
+                                <use href="./images/sprite.svg#icon-twitter1"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="footer-item">
-                        <a href="tel:+380991111111" class="footer-item">+38 099 111 11 11</a>
+                    <li class="footer-social-item">
+                        <a class="footer-social-link" href="">
+                            <svg class="footer-social-icon" width="20px" height="20px">
+                                <use href="./images/sprite.svg#icon-facebook1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a class="footer-social-link" href="">
+                            <svg class="footer-social-icon" width="20px" height="20px">
+                                <use href="./images/sprite.svg#icon-linkedin1"></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
