--- a/portfolio.html
+++ b/portfolio.html
@@ -103,7 +103,7 @@
 </main>
 <!-- Подвал -->
     <footer class="footer-background">
-        <div class="footer-section">
+        <div class="container footer-section">
             <div class="logo-adress">
                 <a class="logo" href="./index.html"><span class="logo-span">Web</span><span
                         class="logo-span-footer">Studio</span></a>
